Switch our FutureUtils executor over to a VT